# serial

./: .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml
examples/: CMakeLists.txt  Device.hpp  DeviceImpl_CRTP.hpp  DeviceManager.hpp  DeviceThread.hpp  device_manager.cpp  new_way.cpp  stl_utils.hpp
lib/: CMakeLists.txt
lib/include/serial/: serial.h
lib/src/: serial.cc
tests/: CMakeLists.txt  unix_serial_tests.cc  unix_timer_tests.cc
